[gd_scene load_steps=5 format=3 uid="uid://1c7wwjxjc8ki"]

[ext_resource type="Script" path="res://main.gd" id="1_6baxo"]
[ext_resource type="PackedScene" uid="uid://i86omxfr06go" path="res://branch.tscn" id="1_msdbd"]
[ext_resource type="PackedScene" uid="uid://b2k6w1suwcldh" path="res://wolf.tscn" id="3_1qh1q"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_6j2c1"]

[node name="Main" type="Node2D"]
script = ExtResource("1_6baxo")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="."]
offset_left = 30.0
offset_top = 28.0
offset_right = 98.0
offset_bottom = 71.0
text = "0"
horizontal_alignment = 1

[node name="NextEggTimer" type="Timer" parent="."]
autostart = true

[node name="EndText" type="RichTextLabel" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="BranchTL" parent="." instance=ExtResource("1_msdbd")]
position = Vector2(150, 117)

[node name="BranchTR" parent="." instance=ExtResource("1_msdbd")]
position = Vector2(1050, 117)
scale = Vector2(-1, 1)

[node name="BranchBL" parent="." instance=ExtResource("1_msdbd")]
position = Vector2(200, 350)

[node name="BranchBR" parent="." instance=ExtResource("1_msdbd")]
position = Vector2(1000, 350)
scale = Vector2(-1, 1)

[node name="Wolf" parent="." instance=ExtResource("3_1qh1q")]

[node name="Floor" type="Area2D" parent="."]
position = Vector2(600, 591)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource("WorldBoundaryShape2D_6j2c1")
metadata/_edit_lock_ = true

[node name="Left" type="Node2D" parent="Floor"]
position = Vector2(-100, 0)

[node name="Right" type="Node2D" parent="Floor"]
position = Vector2(100, 0)
